--- a/vercel.json
+++ b/vercel.json
@@ -7,10 +7,7 @@
       }
     ],
     "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "app.py"
-      }
+      { "src": "/(.*)", "dest": "app.py" }
     ]
   }
   
