--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,13 @@
 {
-    "builds": [{ "src": "app.py", "use": "@vercel/python" }],
-    "routes": [{ "src": "/(.*)", "dest": "app.py" }]
+    "version": 2,
+    "builds": [
+      {
+        "src": "app.py",
+        "use": "@vercel/python"
+      }
+    ],
+    "routes": [
+      { "src": "/display/(.*)", "dest": "/app.py" }
+    ]
   }
   
